test/gpu/native/globalVar.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
globalVar.chpl:5: error: Accessing potentially-remote variables from GPU kernels is not supported yet
globalVar.chpl:1: error: Offending variable was declared here
